--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "Takumi Maegawa"
-email: "tmaegawa@fuji.waseda.jp"
-description: "PhD student" # this means to ignore newlines until "baseurl:"
+email: ""
+description: "" # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://animaegawa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 header_pages:
-  - index.md
-  - cv.md
+  - ja/index.md
   - research.md
   - blog/index.md
 
